添加程序 通过su 客户端，传递命令到守护进程执行(原来只有返回shell终端的功能，现在可以执行单条指令)

--- a/su/jni/CMakeLists.txt
+++ b/su/jni/CMakeLists.txt
@@ -3,4 +3,4 @@ project(socket)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(socket main.cpp socket_client.cpp socket_service.cpp tool.h pts.cpp pts.h)
+add_executable(su main.cpp su_client.cpp su_service.cpp tool.h pts.cpp pts.h)
